# doom_nukem42

./: CMakeLists.txt  Makefile  README.md  author  doom
doom.dSYM/Contents/: Info.plist
doom.dSYM/Contents/Resources/DWARF/: doom
editor/: Makefile
editor/includes/: editor.h
editor/src/: bind_portals.c  bind_portals_utils.c  data_record_sect.c  data_record_vertex.c  declare_portal.c  declare_portal_utils.c  display_icons.c  display_sects.c  display_utils.c  edit_vertex.c  img_load.c  img_set_poss.c  is_inside_sect.c  main.c  pick_texture.c  set_points.c  update.c  write_map.c  write_map_utils.c
engine/: Makefile  doom
engine/includes/: doom.h  errors.h
engine/src/: collision.c  collision_2.c  cr_cols_init.c  draw.c  draw_1.c  draw_2.c  drawsector.c  drawsector_1.c  init.c  key.c  key_2.c  lava_and_health_bar.c  ligth.c  lst_utils.c  main.c  mapping.c  mapping_2.c  mouse.c  parse_utils.c  parse_utils_2.c  parse_utils_3.c  parse_utils_4.c  parse_utils_5.c  parse_validation.c  parse_validation_2.c  parse_validation_3.c  parse_validation_4.c  player_transform.c  player_transform_2.c  print.c  ray.c  ray_2.c  resourse.c  sdlmain.c  shooting.c  sky.c  sprite.c  start_menu.c  utils.c
includes/: doom.h  errors.h
libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isint.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstaddback.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+29 more)
libft/includes/: get_next_line.h  libft.h
resources/: map.txt
resources/en/maps/: def.txt  lava_a  lava_room.txt  map.txt  ss.txt
resourse/: map.txt
src/: collision.c  cr_cols_init.c  debug.c  draw.c  drawsector.c  init.c  init_texture.c  key.c  ligth.c  lst_utils.c  main.c  mapping.c  mouse.c  parse_utils.c  parse_validation.c  player_transform.c  print.c  ray.c  resourse.c  sdlmain.c  sky.c  sprite.c  utils.c
